# heartwood

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENCE  README.md  SECURITY.md  deny.toml  llms-full.txt  llms.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
boards/pi/: heartwood-bridge@.service  heartwood-bunker@.service  heartwood@.service  setup.sh  torrc
bunker/: index.mjs  lib.mjs  package-lock.json  package.json
bunker/test/: lib.test.mjs  personas-integration.mjs  personas-real-client.mjs  setup-personas.mjs
crates/heartwood-bridge/: Cargo.toml
crates/heartwood-bridge/src/: bridge.rs  config.rs  dedup.rs  e2e.rs  event.rs  frame.rs  ledger.rs  main.rs  npub.rs  relay.rs  serial.rs
crates/heartwood-core/: Cargo.toml
crates/heartwood-core/examples/: basic_usage.rs
crates/heartwood-core/src/: derive.rs  encoding.rs  lib.rs  persona.rs  proof.rs  recover.rs  root.rs  types.rs  validate.rs
crates/heartwood-core/tests/: derive_test.rs  encoding_test.rs  full_vectors_test.rs  generate_test.rs  mnemonic_test.rs  persona_test.rs  proof_test.rs  recover_test.rs  validate_test.rs
crates/heartwood-device/: Cargo.toml
crates/heartwood-device/src/: audit.rs  main.rs  oled.rs  storage.rs  tor.rs  web.rs
crates/heartwood-frame/: Cargo.toml
crates/heartwood-frame/src/: lib.rs
crates/heartwood-nip46/: Cargo.toml
crates/heartwood-nip46/src/: encrypt.rs  lib.rs  methods.rs  permissions.rs  server.rs  session.rs  sign.rs
crates/heartwood-nip46/tests/: handler_test.rs  security_test.rs  sign_test.rs
docker/: entrypoint.sh  torrc
docs/: 2026-06-19-relay-mediated-management.md  2026-06-25-relay-serial-bridge.md  ECOSYSTEM.md  QUICKSTART.md  ROADMAP.md
docs/plans/: 2026-03-31-heartwood-phase1.md  2026-04-02-multi-instance-bunker-design.md  2026-04-02-multi-instance-bunker-plan.md
docs/specs/: 2026-03-31-heartwood-design.md
pi/: heartwood-bunker.service  heartwood-bunker@.service  heartwood.service  setup.sh  torrc
tools/: derive-client-key.mjs  package.json
web/: index.html
