[workspace]
resolver = "2"
members = [
    # nsec-tree-rs — derivation primitive kept as the reference Rust port (now
    # unused by any binary here; the soft signer that consumed it is retired).
    "crates/heartwood-core",
    "crates/heartwood-frame",
    "crates/heartwood-bridge",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/forgesworn/heartwood"
