[package]
name = "heartwood-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "nsec-tree deterministic identity derivation — Rust port"

[dependencies]
k256 = { version = "0.13", features = ["schnorr", "arithmetic"] }
signature = "2"
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
bip32 = "0.5"
bip39 = "2"
bech32 = "0.11"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
