[package]
name = "nsec-tree-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic Nostr sub-identity derivation — Rust port of nsec-tree. HMAC-based one-way key hierarchy with Schnorr linkage proofs."
keywords = ["nostr", "nsec-tree", "signing", "identity", "secp256k1"]
categories = ["cryptography", "authentication"]

[dependencies]
k256 = { version = "0.13", features = ["schnorr", "arithmetic"] }
signature = "2"
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
bip32 = "0.5"
bip39 = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
bech32 = "0.11"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
