[package]
name = "heartwood-device"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Heartwood device binary for Raspberry Pi"
keywords = ["nostr", "raspberry-pi", "signing", "tor", "hardware"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
heartwood-core = { path = "../heartwood-core" }
heartwood-nip46 = { path = "../heartwood-nip46" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
qrcode = "0.14"
base64 = "0.22"
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
aes-gcm = "0.10"
zeroize = "1"
