[package]
name = "heartwood-device"
version = "0.7.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Heartwood device binary for Raspberry Pi"
keywords = ["nostr", "raspberry-pi", "signing", "tor", "hardware"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
nsec-tree-rs = { path = "../heartwood-core" }
nip46-signer = { path = "../heartwood-nip46" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
qrcode = "0.14"
base64 = "0.22"
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
aes-gcm = "0.10"
zeroize = "1"
bip39 = "2"
serialport = { version = "4", default-features = false } # no libudev: sysfs enumeration suffices and cross-builds stay linkable
heartwood-frame = { path = "../heartwood-frame" }
# Debug-build-only CORS for the Sapwood dev server (see web.rs create_router).
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tower = { version = "0.5", features = ["util"] }
