[package]
name = "heartwood-nip46"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NIP-46 remote signing server with Heartwood extensions"
keywords = ["nostr", "nip46", "remote-signing", "identity", "tor"]
categories = ["cryptography", "authentication"]

[dependencies]
heartwood-core = { path = "../heartwood-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
k256 = { version = "0.13", features = ["schnorr"] }
signature = "2"
hex = "0.4"
zeroize = "1"

[features]
default = []
test-helpers = []

[dev-dependencies]
heartwood-nip46 = { path = ".", features = ["test-helpers"] }

