[package]
name = "nip46-signer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NIP-46 remote signing server — per-client permissions, session management, and Heartwood signing extensions."
keywords = ["nostr", "nip-46", "remote-signing", "bunker", "signer"]
categories = ["cryptography", "authentication"]

[dependencies]
nsec-tree-rs = { version = "0.1.0", path = "../heartwood-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
k256 = { version = "0.13", features = ["schnorr", "ecdh"] }
chacha20 = { version = "0.10", features = ["xchacha"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
signature = "2"
hex = "0.4"
zeroize = "1"

[features]
default = []
test-helpers = []

[dev-dependencies]
nip46-signer = { path = ".", features = ["test-helpers"] }

